[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "raskat-signals"
description = "raSkat module for working with signals"
authors = [{ name="Youriy Volkov", email="atribolt@gmail.com" }]
license = { text = "GPL3" }
dynamic = ["version"]
requires-python = "~=3.10"
dependencies = ["numpy>=1.25", "msgpack>=1.1.1"]


[tool.setuptools.packages.find]
include = ["raskat_signals*"]


[tool.setuptools.dynamic]
version = {attr="raskat_signals.version.VERSION"}

[project.optional-dependencies]
dev = ["ruff"]
visualize = ["matplotlib"]

[project.scripts]
raskat-signal = "raskat_signals.visualize:main"


# Ruff configure
[tool.ruff]
line-length = 120
tab-size = 2
